Use manual writing with libpng only when exiv2 version does not support it. (99% if changes are only intendation change)

BUG: 151552

svn path=/trunk/extragear/graphics/digikam/; revision=922679